--- a/packages/react-keycloak-id/package.json
+++ b/packages/react-keycloak-id/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react/keycloak-id",
+  "name": "react-keycloak-id",
   "version": "0.0.1",
   "description": "A small package for create middleware using keycloak js",
   "main": "dist/index.js",
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.config.js"
+    "build": "rollup -c rollup.config.js"
   },
   "author": "Ugi Ispoyo Widodo",
   "license": "ISC",
