--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "lerna": "^6.1.0"
   },
   "scripts": {
-    "publish:react-keycloak-id": "lerna exec --scope=react-keycloak-id npm run acp && npm run commit"
+    "publish:react-keycloak-id": "npm run acp && npm run commit",
+    "commit": "git-cz",
+    "acp": "git add . && npm run commit && git push"
   },
   "name": "react",
   "workspaces": {
