--- a/packages/react-keycloak-id/package.json
+++ b/packages/react-keycloak-id/package.json
@@ -34,6 +34,15 @@
   "dependencies": {
     "react": "^18.2.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ugiispoyo/react-keycloak-id"
+  },
+  "keywords": [
+    "react-keycloak-id",
+    "keycloak",
+    "react-keycloak"
+  ],
   "release": {
     "branches": [
       "master"
