--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - master
     paths: 
-      - packages/react-keycloak-id
+      - packages/react-keycloak-id/**
       - .github/workflows/publish.yml
 
 jobs:
