--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd packages/react-keycloak-id && npm i && npm i semantic-release && npm run semantic-release
+    - name: Publish package
       env: 
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |-
+        cd packages/react-keycloak-id && npm i && npm i semantic-release && npm run semantic-release
+      
