--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "apps/*"
+      "examples/*"
     ]
   },
   "version": "0.0.0-development",
