--- a/packages/react-keycloak-id/package.json
+++ b/packages/react-keycloak-id/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-keycloak-id",
+  "version": "1.0.0",
   "description": "A small package for create middleware using keycloak js",
   "main": "dist/index.js",
   "type": "module",
