--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Publish package
+      run: |-
+        cd packages/react-keycloak-id && npm i semantic-release && npm run semantic-release
       env: 
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |-
-        cd packages/react-keycloak-id && npm i && npm i semantic-release && npm run semantic-release
       
