--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Publish to npm (CI)
 
 on:
   push:
@@ -19,10 +19,10 @@ jobs:
     
     steps: 
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup NodeJS
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '18'
     - name: Publish package
       run: |-
         cd packages/react-keycloak-id && npm i semantic-release@20.0.2 && npm run semantic-release
